# robo-perf

./: README.md
nuttx_ws/: CMakeLists.txt
nuttx_ws/b/: CMakeCache.txt  Makefile  cmake_install.cmake
nuttx_ws/b/modules/pid/: Makefile
nuttx_ws/cmake/: stm32f4.cmake
nuttx_ws/modules/pid/: CMakeLists.txt  main.cpp
nuttx_ws/nuttx/: .config  System.map
nuttx_ws/nuttx/include/nuttx/: sched.h
nuttx_ws/nuttx/scripts/: Make.defs  f401re.ld  target.cmake
ros2_ws/: readme.md
ros2_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws/install/turtlesim/lib/turtlesim/: draw_square  mimic  turtle_teleop_key
ros2_ws/install/turtlesim/share/turtlesim/: local_setup.sh  package.sh
ros2_ws/log/: latest_build
subprojects/fpga/debugTrace-verilog/: dbgIF.v  jtagIF.v  swdIF.v  traceIF.v
